--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,9 @@ name = "computor"
 version = "0.1.0"
 edition = "2021"
 
+[profile.test]
+opt-level = 0
+debug = true
+
 [dependencies]
-nom = "7.1.3"
+macros = { path = "src/macros" }
